[package]
name = "tranzport"
version = "0.1.0"
authors = ["CreamyMilk <creamym254@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = { version = "3.3.2"}
env_logger = "0.8"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"

